# BiCrystal

./: .gitignore  CNAME  README.md  _config.yml  bicrystal  helpers_bicrystal.py  heterostructures.py  index.html  index.md  params.json  program.py  pyproject.toml
bicrystal/: .bicrystal.swp  .program.py.swp  README.md  atomic_plotting_data.json  bicrystal  helpers_bicrystal.py  periodic_table.csv  plotting_bicrystal.py  program.py
bicrystal/examples/: cc28.scf.in
bicrystal/examples/blue_phosphorene/: pp.scf.in  pp124.scf.in  pp148.scf.in  pp172.scf.in  pp196.scf.in  pp244.scf.in  pp268.scf.in  pp28.scf.in  pp316.scf.in  pp364.scf.in  pp52.scf.in  pp76.scf.in
bicrystal/examples/graphite/: cc124.scf.in  cc148.scf.in  cc172.scf.in  cc196.scf.in  cc244.scf.in  cc268.scf.in  cc28.scf.in  cc316.scf.in  cc364.scf.in  cc52.scf.in  cc76.scf.in
bicrystal/examples/mos2/: mos114.scf.in  mos186.scf.in  mos186b.scf.in  mos222.scf.in  mos258.scf.in  mos294.scf.in  mos366.scf.in  mos402.scf.in  (+4 more)
bicrystal/other_plotting/: plotting_bicrystal.py.cp  plotting_bicrystal.py.cp2
cifs/: c.cif  cc.cif  pp.cif
examples/: mos42.scf.in  pp28.scf.in
gr_files/: gr1x1.pw.in  gr2x2.pw.in  gr3x3.pw.in  gr4x4.pw.in  gr5x5.pw.in
gr_files/gr_cifs/: bi-c.cif  c-b.cif  c2.cif  cc.cif  mono-c1.cif  mono-c2.cif  mono-c2b.cif  mono-c3.cif  mono-c3b.cif
other_plotting/: plotting_bicrystal.py.cp3_works_but_slow  plotting_bicrystal.py.cp4_browser_plot
sic_files/: sic-Si24.scf.in  sic-Si36.scf.in
sic_files/sic-cifs/: sic-1.cif  sic-36b.scf.in  sic-6h-b.cif  sic-6h.cif  sic-amd.cif
