[tool.poetry]
name = "bicrystal"
version = "0.1.0"
description = ""
authors = ["Tilas Kabengele <tilas_kabengele@brown.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pycifrw = "4.4.2"
crystals = "^1.6.0"
shapely = "^1.8.5.post1"
pandas = "^1.5.0"
scipy = "^1.9.2"
scikit-learn = "^1.1.2"
matplotlib = "^3.6.1"
plotly = "^5.14.1"
pymatgen = "^2023.5.31"
pyvista = "^0.39.1"
ase = "^3.22.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

